header: fixed menu tablet spacing

--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -76,7 +76,7 @@
       padding: 0.66rem 1rem;
     }
   
-@media screen and (max-width: 650px) {
+@media screen and (min-width: 600px) and (max-width: 700px) {
   .header__left {
     flex: 0;
   }
